Updates from ShareLaTeX

--- a/Proposal/2acceptability.tex
+++ b/Proposal/2acceptability.tex
@@ -50,7 +50,11 @@ In this section, we present the relation between privacy concerns and the accept
 Therefore, we consider privacy as one of the most important key factors affect users when they are making decision on whether to adopt an IoT system. Next, we present detailed analysis on IoT privacy.
 
 \subsubsection{Type of Information: \textit{What is collected/shared}}
-Various types of information can be collected/shared in an IoT system, such as location, photos, voice, and videos. From our interviews, we observe that participants show different levels of privacy concerns assuming a certain types of information about them is collected or shared. For example, some user will show high privacy concern if his/her photos or videos are shared, but not mind sharing his/her location. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
+Various types of information can be collected/shared in an IoT system, such as location, photos, voice, and videos. From our interviews, we observed that participants showed different levels of privacy concerns on different types of information about them being collected or shared. 
+
+For example,
+%some user will show high privacy concern about his/her photos or videos being shared, but not mind sharing his/her location. B
+below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
 
 \textit{I: ``So you are not ok with photo, video or voice?''\\}
 
@@ -60,9 +64,10 @@ Various types of information can be collected/shared in an IoT system, such as l
 
 \textit{P: ``I mean, I understand that it is being stored to improve your algorithms but what if that was to get leaked.''\\}
 
-Typically, users are mostly uncomfortable with sharing their data that can be used to easily identify their real world identity. ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share." They have their reservations against their private data being shared as it might threaten their security. Privacy information like date of birth and address helps in identifying the person and can be used to hack or rob the person. Therefore, we can say that people are worried about sharing their private information.
+Within the various types of personal information that can be collected or shared, some information can be used to help identify users' identity or even hack or rob the users. We define this type of personal information as \textit{Identifiable Information}.
+Typically, users are mostly uncomfortable with sharing sensitive information that , such as photos and videos. They have their reservations against their private data being shared as it might threaten their security. Privacy information like date of birth and address helps in identifying the person and can be used to hack or rob the person. Therefore, we can say that people are worried about sharing their private information.
 
-However, some participants expressed that some of their private data can be shared unless it is sensitive. One participant mentioned, "At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, example my email has some social security or something.".
+Some participants expressed that some of their private data can be shared unless it is sensitive. One example is that one participant mentioned, "At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, example my email has some social security or something.". Another participant mentioned that ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share."
 
 Another participant also mentioned, \textit {``Apart from photos, what other kind of information you like or don't like to be shared? Like saying something dirty to my girlfriend or something. That's okay like guy's being a guy. But if I am having really you know personal conversation about death of a loved one or something and we are trying to work out logistics or something. That's a problem for me. But for a regular conversation I am ok".} So the voice, seen as private data by many users, can be recorded or shared for some users.
 
