--- a/Proposal/2acceptability.tex
+++ b/Proposal/2acceptability.tex
@@ -64,9 +64,11 @@ below is an excerpt from an interview which highlights the importance of what in
 
 \textit{P: ``I mean, I understand that it is being stored to improve your algorithms but what if that was to get leaked.''\\}
 
-Within the various types of personal information that can be collected or shared, some information can be used to help identify users' identity or even hack or rob the users. We define this type of personal information as \textit{Identifiable Information}.
-Typically, users are mostly uncomfortable with sharing sensitive information that , such as photos and videos. They have their reservations against their private data being shared as it might threaten their security. Privacy information like date of birth and address helps in identifying the person and can be used to hack or rob the person. Therefore, we can say that people are worried about sharing their private information.
+Within the various types of personal information that can be collected or shared, some information can be used to help identify users' identity or even hack or rob the users, such as photos and videos. We define this type of personal information as \textbf{\textit{Identifiable Information}}.
 
+Typically, users are mostly not comfortable with sharing their \textit{identifiable information}  in an IoT system. They worried about sharing this type of data because it may threaten their security.
+
+For the information that are not sensitive
 Some participants expressed that some of their private data can be shared unless it is sensitive. One example is that one participant mentioned, "At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, example my email has some social security or something.". Another participant mentioned that ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share."
 
 Another participant also mentioned, \textit {``Apart from photos, what other kind of information you like or don't like to be shared? Like saying something dirty to my girlfriend or something. That's okay like guy's being a guy. But if I am having really you know personal conversation about death of a loved one or something and we are trying to work out logistics or something. That's a problem for me. But for a regular conversation I am ok".} So the voice, seen as private data by many users, can be recorded or shared for some users.
@@ -74,11 +76,13 @@ Another participant also mentioned, \textit {``Apart from photos, what other kin
 It is intriguing that users were well aware of what type of information is collected/shared. This suggests that the designer of future IoT privacy-setting interfaces should provide the user separated options of allowing or denying data collecting/sharing for various types of information.
 
 \subsubsection{Trust in IoT: \textit{Who is collecting, storing, and sharing my data?}}
-Another aspect related to the IoT privacy we observed in our interviews is the \textbf{Trust}, the object of which is to whom users' informations are shared with. The object of trust from users can be varied in different contexts of IoT environments. For example, in general IoT environment, the objects can be an individual (e.g. your colleagues), an organization (e.g. your employer), the government and so on. While the user is in a Household IoT environment, his/her information may be first shared within all the connected IoT devices deployed in his/her home for various functionalities. Moreover, those smart IoT devices may further transfer users' information to their manufactures to store on a remote server (cloud) or even share them with the third-party for other purpose, such as advertisements and better recommendations. 
+Another aspect related to the IoT privacy we observed in our interviews is \textbf{Trust}. Users care about who is collecting their data, with whom their data is shared, and where their data is stored. The object of trust from users can be varied in different IoT contexts. For example, in general IoT environment, the objects can be an individual (e.g. your colleagues), an organization (e.g. your employer), or the government. While in a household IoT environment, users' data may be first shared within all the connected IoT devices deployed in his/her home for various functionalities. Moreover, the collect data from users can be further uploaded to the manufacturers and can be stored on a remote server (cloud) or even shared with Third-Party for other purposes, such as advertisements and better recommendations. While in fitness IoT context, users' data are mostly sent to the manufacturers directly for further analysis purpose.
 
-From our interview, we observed that the trust to the second-party or even the third-party also varies from user to user. One of the participants pointed out that, \textit{P: "For example, Apple in the news recently for refuting the FBI. FBI wanted in, Apple said we can't access these phone that actually turned me on to apple I previously used android. And the fact that they say they made their devices so secured that they can't even access them that really interests me. So yeah I am very concerned about it but I think now that I evolved into the Apple eco-system. I pretty much give apple everything because I trust them."}
+From our interviews, we observed that the trust to the Second-Party or even the Third-Party also varies from user to user. One of the participants pointed out that, \textit{P: "For example, Apple in the news recently for refuting the FBI. FBI wanted in, Apple said we can't access these phone that actually turned me on to apple I previously used android. And the fact that they say they made their devices so secured that they can't even access them that really interests me. So yeah I am very concerned about it but I think now that I evolved into the Apple eco-system. I pretty much give apple everything because I trust them."}
 
-Another example is:
+
+
+We also observed that once the trust to the manufacturers is established, it can propagate from the manufacturers to a Third-Party, which users are not aware of or even know about in the first place. An example from our interview is:
 
 \textit{I: ``Would you be alright if the manufacturer of those products collect your data and share with other organizations and provide more specific recommendation to you? Will you be OK with that?''\\}
 
@@ -92,7 +96,7 @@ Another example is:
 
 \textit{P: ``Yes, I trust them.''\\}
 
-It is evident from the conversation above that once established, trust can propagate from the second-party to the third-party via a "trust chain". As shown in Figure~\ref{fig:trustchain}, a "trust chain" is established when the organization we trust, deals with a third party organization which we are not aware about in the first place but still choose to trust. This kind of trust can be established only when there is a clear sight at the benefits that the user might get out of such a connection.
+As shown in Figure~\ref{fig:trustchain}, we define this phenomenon as \textit{\textbf{Trust Chain}}. Trust chain is established mostly because of the trust from the users to the manufacturers, and can arguably be categorized as an emotional behavior because users wouldn't have a clear sight at the benefits and risks when they choose to trust the Third-Parties that manufacturers choose to shared their data with. And this behavior could bring harm to their security. To be more rational, users are suggested to investigate the Third-Parties that will handle their personal data.
 
 \begin{figure}
 	\centering
@@ -101,16 +105,17 @@ It is evident from the conversation above that once established, trust can propa
 	\label{fig:trustchain}
 \end{figure}
 
-Based on the interview results, users are well aware of who is collecting, storing, and sharing their data. They have a demand of controlling these data flows proceeded by different second-parties or third-parties. The designer of future IoT privacy-setting interfaces should solve the challenges of differing various second-parties and third-parties, and providing access control options available to users of different IoT contexts.
+In all, based on the interview results, users are well aware of who is collecting, storing, and sharing their data. They have a demand of controlling the data flows to different Second-Parties or Third-Parties. The designers of future IoT privacy-setting interfaces should solve the challenges of differing various Second-parties and Third-Parties, and providing suitable access control options available to users of different IoT contexts.
 
 \subsection{IoT Usability and Acceptability}
-We now present the effect that usability of the IoT devices has on the acceptability to IoT systems/devices. We first describe the "convenience" and then move forward to discuss "control".
+We now present the effect that usability of the IoT devices has on the acceptability to IoT systems/devices. We first describe the "convenience" and then discuss "control".
 
 \subsubsection{Convenience and Usability}
-The first most important aspect of usability is convenience. Convenience in case of IoT can be treated as the ease with which the IoT systems/devices offers funcitonality. Convenience can simply be a feedback which is provided by the temperature sensors in an household IoT system or the various recommendations provided by a recommender system in a way that it eases the shopping experience on e-commerce websites, such as \textit{Amazon.com}. One of the users was asked about how they would feel being in an IoT environment replied by saying, "Excited actually! When you describe that I don't know if that's sharing your same excitement but.. umm it actually is exciting to me because its so wonderfully convenient, so beautifully convenient." The same participant further went on saying "I love it. I mean it would be awesome to look at my phone right now and say 'oh! My door's unlocked'. Actually my brother has that, actually he can check his phone can look if the door locks. And it's really cool! You don't have to worry when you go out on a trip. Or you can control the A/C if you forgot. It's really cool."  It is clear from this statement that convenience of use of IoT systems/devices is directly associated with the acceptability. Almost all of our participants pointed out the same thing in a similar way. The convenience offered through IoT systems/devices by enabling the users with a common platform from where they can easily connect with their devices goes a long way in improving the overall usability of the systems and thereby impacts the acceptability of IoT in its totality. Usability for a few users also encompasses the aesthetics of any system which is evident from the statements made by participants.
+The most important aspect of usability is convenience. Convenience in case of IoT can be treated as the ease with which the IoT systems/devices offers functionality. Convenience can simply be a feedback which is provided by the temperature sensors in an household IoT system or the various recommendations provided by a smart assistant (e.g. Amazon Echo) in a way that it eases the shopping experience on online shopping websites (e.g. Amazon.com). One of the users was asked about how they would feel being in an IoT environment replied by saying, ``Excited actually! When you describe that I don't know if that's sharing your same excitement but.. umm it actually is exciting to me because its so wonderfully convenient, so beautifully convenient." The same participant further went on saying ``I love it. I mean it would be awesome to look at my phone right now and say 'oh! My door's unlocked'. Actually my brother has that, actually he can check his phone can look if the door locks. And it's really cool! You don't have to worry when you go out on a trip. Or you can control the A/C if you forgot. It's really cool."  It is clear from this statement that convenience of use of IoT systems/devices is directly associated with the acceptability. Almost all of our participants pointed out the same thing in a similar way. The convenience offered through IoT systems/devices by enabling the users with a common platform from where they can easily connect with their devices goes a long way in improving the overall usability of the systems and thereby impacts the acceptability of IoT in its totality. 
+%Usability for a few users also encompasses the aesthetics of any system which is evident from the statements made by participants.
 
 \subsubsection{Being in Control and Usability}
-Apart from convenience, the feeling of being in control of the system is also of equal importance. Another interesting aspect of control is that it is highly dependent on the information about the state of the system. Any individual will try to control something only when they are aware that it needs to be controlled or that it can be controlled. Therefore, being notified is primarily important before being able to control any aspect of the system. One of the participants when questioned about their opinion of overall usability of any device, mentioned enthusiastically that "I am excited by the idea that me being able to control what they want to do. I am less excited by the idea that them doing autonomously control what they want because some company told them to do it. Luckily the technology is so dumb right now. It's so linear, that it's not good at anticipating the things. But when it gets smarter, as long as it knew that I was an individual who would care, I think the same technology would allow you to totally automate your life but it would allow me to pick and choose which parts to automate". Even though users like a scenario of having everything automated, they still want to believe that they are in a position to control and are always aware of everything that the system is handling. It is evident from the comments that users want to keep absolute automation as a feature, but would probably completely rely on it when they have absolute confidence over its capability to handle things autonomously. A similar example in this regard would be the case of a pilot operating a commercial aircraft who would be prefer it more if the airplane were on autopilot while cruising. Although, he would also like to have the system informing him about the vital stats of the airplane while it's on autopilot. He would rather rely on his/her skills during landing and take-off of the aircraft. Lack of confidence in automated systems during decisive moments is a common trait found in human beings which in this case is clearly exhibited by the pilot.
+From our study, we found that users are al well-aware of being in control when they are considering whether to adopt an IoT system. Another interesting aspect of control is that it is highly dependent on the information about the state of the system. Arguably, any individual will try to control something only when they are aware that it needs to be controlled or that it can be controlled. Therefore, being notified is primarily important before being able to control any aspect of the system. One of the participants when questioned about their opinion of overall usability of any device, mentioned enthusiastically that "I am excited by the idea that me being able to control what they want to do. I am less excited by the idea that them doing autonomously control what they want because some company told them to do it. Luckily the technology is so dumb right now. It's so linear, that it's not good at anticipating the things. But when it gets smarter, as long as it knew that I was an individual who would care, I think the same technology would allow you to totally automate your life but it would allow me to pick and choose which parts to automate". Even though users like a scenario of having everything automated, they still want to believe that they are in a position to control and are always aware of everything that the system is handling. It is evident from the comments that users want to keep absolute automation as a feature, but would probably completely rely on it when they have absolute confidence over its capability to handle things autonomously. A similar example in this regard would be the case of a pilot operating a commercial aircraft who would be prefer it more if the airplane were on autopilot while cruising. Although, he would also like to have the system informing him about the vital stats of the airplane while it's on autopilot. He would rather rely on his/her skills during landing and take-off of the aircraft. Lack of confidence in automated systems during decisive moments is a common trait found in human beings which in this case is clearly exhibited by the pilot.
 
 \subsubsection{Being Notified and Being in Control}
 "Control" can be the complete manual control of the system or it can be a situation where the user is notified regarding something which can be changed or altered subject to manual intervention. This is basically the system saying that it has an affordance which the user can utilize to better suit his/her convenience. In such a situation, the notification system (perhaps an application for IoT installed on the user's tablet) forms an interface between the machine and the user which serves as a medium to control the degree of automation. The entire idea behind having such an interface is to provide the user with control without compromising convenience. This phenomenon is depicted in the figure~\ref{fig:interface}.
