updated indro and acceptability

--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -17,7 +17,7 @@ In addition, the user interface for setting privacy preferences of present IoT d
 
 In this proposal, we try to solve the main research question:
 
-In Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users. By doing this, we try to gain deeper understanding on the general IoT acceptability from users' perspective, i.e. \textbf{What are the factors that affect users' decision when they consider adopting a new IoT device}. The reason we conduct this preliminary user study is that IoT device users in real usage context would more likely pay higher attention to those factors that have already affected their decisions when they are considering adopting a IoT device, i.e. The factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
+In Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users to gain deeper understanding on the general IoT acceptability from users' perspective since the factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
 	
 In Chapter~\ref{chapter:generalIoT}, we try to answer the first sub question by researching the decision-making characteristics of general IoT users. We demonstrate our existing work on recommending privacy settings for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.
 	
