--- a/Proposal/2acceptability.tex
+++ b/Proposal/2acceptability.tex
@@ -2,7 +2,7 @@
 
 \chapter{The Acceptability of IoT (original work)}\label{chapter:acceptability}
 
-In this chapter, we present a preliminary survey study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis on the results of the study.
+In this chapter, we present a preliminary survey study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems. By conducting this pilot study, we try to gain deeper understanding on the general IoT acceptability from users' perspective, i.e. \textbf{What are the factors that affect users' decision when they consider adopting a new IoT device}. The reason we conduct this preliminary user study is that IoT device users in real usage context would more likely pay higher attention to those factors that have already affected their decisions when they are considering adopting a IoT device, i.e. The factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis on the results of the study, and finally summarize our findings.
 
 \section{Methods}
 
@@ -129,7 +129,7 @@ From our study, we found that users are al well-aware of being in control when t
 The assumption here is that the user is being notified about the several important aspects of the system. Being notified even after allowing something to take place is a requirement prevalent among many participants. One of the participants explicitly mentioned he would like periodic reminders about what is being recorded. This leads us to another interesting aspect of such a scenario which is the 'trust'. We assume that the user trusts the feedback from the system. The notification is perceived by the user as a kind of feedback and this leads to an impression of control in the user's mind where he/she is the master and the system is the apprentice. We think this situation is paramount in establishing trust and all participants desired it.
 
 \section{Summary}
-Based on the above analysis to our results, we see that when making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability (See Figure~\ref{fig:AcceptingProcess}). If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and try out an IoT device/system. 
+Based on the above analysis on our results, we see that when making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability (See Figure~\ref{fig:AcceptingProcess}). If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and try out an IoT device/system. 
 
 In a deeper level of usability, if the users find that the IoT systems/devices will enhance their convenience, they will be more inclined to accept it. However, this is based on their perception of the actual utility of the automation provided by IoT. For example, if someone stays near a grocery store, he/she would tend to believe that there is not enough purpose for an IoT systems/devices when it comes to automatic ordering of the same grocery list online. 
 
