--- a/Proposal/6evaluation.tex
+++ b/Proposal/6evaluation.tex
@@ -59,12 +59,12 @@ After above procedures, one out of the 8 user interfaces will be randomly chosen
 
 Next, the participants will be give a survey containing questions about three different aspects: \textit{Subjective System Aspects} (Orange color), \textit{Personal Characteristics} (Blue color), and \textit{Situational Characteristics} (Green color), as shown in Figure~\ref{fig:uimodel}. All the items of the questionnaire are shown in Appendix.
 
-%\begin{figure}
-%	\centering
-%	\includegraphics[width=0.9\textwidth]{figures/uimodel.pdf}
-%	\caption{Expected Model for Proposed User Study}
-%	\label{fig:uimodel}
-%\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/uimodel.pdf}
+	\caption{Expected Model for Proposed User Study}
+	\label{fig:uimodel}
+\end{figure}
 
 As shown Figure~\ref{fig:uimodel}, we expect `General Privacy Concerns', `Data Collection Concerns', and 'Knowledge' all have a positive effect on the `Perceived Privacy Threats', which consequently has a negative effect on the `Trust' and `Satisfaction'. The mediation effect of `Trust' on `Satisfaction' will also be investigated. The effect of user's decision style is also interesting to us since different style of decision making may have effect on `Perceived Control' or `Perceived Privacy Threats', which will then affect user's `Trust' and `Satisfaction'. `Interface Complexity' is expected to have a positive effect on`Perceived Interface Complexity`, `Perceived Profile Setting Match', `Perceived Control', and `Perceived Ease of Use', which will have a positive effect on `Trust' and `Satisfaction'. `Profile Consevativeness' is expected to have a negative effect on `Perceived Privacy Threats' and a positive effect on `Perceived Control', which will then have a positive effect on both `Trust' and `Satisfaction'.
 
